--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,5 @@ script:
 - cargo test
 - cargo doc --no-deps
 
-deploy:
-- provider: script
-  script: .travis/gh-pages.sh
+after_success:
+- .travis/gh-pages.sh
