--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "r2d2_redis"
-version = "0.1.0"
+version = "0.2.0"
 authors = [
     "Steven Fackler <sfackler@gmail.com>",
     "Nev Delap <nevdelap@gmail.com>",
@@ -9,7 +9,7 @@ authors = [
 license = "MIT"
 description = "Redis support for the r2d2 connection pool"
 repository = "https://github.com/sorccu/r2d2-redis"
-documentation = "https://sorccu.github.io/r2d2-redis/doc/master/r2d2_redis/"
+documentation = "https://sorccu.github.io/r2d2-redis/doc/v0.2.0/r2d2_redis/"
 keywords = ["redis", "pool", "database", "r2d2"]
 include = ["src/**/*", "LICENSE", "Cargo.toml"]
 
