--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "r2d2_redis"
-version = "0.2.0"
+version = "0.3.0"
 authors = [
     "Steven Fackler <sfackler@gmail.com>",
     "Nev Delap <nevdelap@gmail.com>",
     "Simo Kinnunen <simo@shoqolate.com>",
+    "Jan-Erik Rediger <janerik@fnordig.de>"
 ]
 license = "MIT"
 description = "Redis support for the r2d2 connection pool"
